--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Joke Generator</title>
 </head>
 <body>
     
-    <h1 id="setup"></h1>
-    <h2 id="punchline"></h2>
+    <div id="container">
+        <h3 id="title">Joke Generator</h3>
+        <h1 id="setup"></h1>
+        <h2 id="punchline"></h2>
+    </div>
 
+    <div id="buttons">
+        <button class="button" id="anotherOne">I can take another one</button>
+        <button class="button" id="all">I can take them all</button>
+    </div>
+
+    
     <script src="script.js"></script>
 </body>
 </html>
