index.html - button text edit

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
 
     <div id="buttons">
-        <button class="button" id="anotherOne">I can take another one</button>
-        <button class="button" id="all">I can take them all</button>
+        <button class="button" id="anotherOne">I can handle another one</button>
+        <button class="button" id="all">I can handle them all</button>
     </div>
 
     
